--- a/staff/carlos-diestro/postit-api/package.json
+++ b/staff/carlos-diestro/postit-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postit-api",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
+    "mongodb": "^3.1.9",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
