--- a/staff/carlos-diestro/cuve/api/package.json
+++ b/staff/carlos-diestro/cuve/api/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-fileupload": "^0.4.0",
     "body-parser": "^1.18.3",
     "busboy": "^0.2.14",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-fileupload": "^1.0.0",
+    "ip": "^1.1.5",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.11"
   },
